--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "forceConsistentCasingInFileNames": true,
     "experimentalDecorators": true,
     "plugins": [
-      { "transform": "metadata-booster" }
+      { "transform": "@boostercloud/metadata-booster" }
     ]
   },
   "include": [
