--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "version": "0.1.0",
   "author": "",
   "dependencies": {
-    "@boostercloud/framework-core": "^0.20.3",
-    "@boostercloud/framework-types": "^0.20.3",
-    "@boostercloud/framework-provider-azure": "*"
+    "@boostercloud/framework-core": "1.3.0",
+    "@boostercloud/framework-types": "1.3.0",
+    "@boostercloud/framework-provider-azure": "1.3.0",
+    "@boostercloud/framework-common-helpers": "1.3.0",
+    "tslib": "^2.4.0"
   },
   "devDependencies": {
-    "@boostercloud/framework-provider-azure-infrastructure": "*",
+    "rocket-encryption-azure-infrastructure": "1.0.6",
+    "@boostercloud/metadata-booster": "1.3.0",
+    "@types/jsonwebtoken": "^8.5.1",
+    "@boostercloud/framework-provider-azure-infrastructure": "1.3.0",
     "rimraf": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "4.22.1",
     "@typescript-eslint/parser": "4.22.1",
@@ -20,11 +25,10 @@
     "@types/mocha": "8.2.2",
     "nyc": "15.1.0",
     "prettier":  "2.3.0",
-    "typescript": "4.2.4",
+    "typescript": "4.7.4",
     "ts-node": "9.1.1",
     "@types/node": "15.0.2",
-    "ttypescript": "1.5.12",
-    "metadata-booster": "0.3.1"
+    "ttypescript": "1.5.13"
   },
   "engines": {
     "node": ">=14.0.0"
@@ -36,7 +40,7 @@
   "scripts": {
     "lint:check": "eslint --ext '.js,.ts' **/*.ts",
     "lint:fix": "eslint --quiet --fix --ext '.js,.ts' **/*.ts",
-    "compile": "ttsc -b tsconfig.json",
+    "build": "ttsc -b tsconfig.json",
     "deploy": "boost deploy",
     "clean": "rimraf ./dist tsconfig.tsbuildinfo",
     "test": "AWS_SDK_LOAD_CONFIG=true BOOSTER_ENV=test nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\""
