--- a/package.json
+++ b/package.json
@@ -4,31 +4,32 @@
   "version": "0.1.0",
   "author": "",
   "dependencies": {
-    "@boostercloud/framework-core": "1.3.0",
-    "@boostercloud/framework-types": "1.3.0",
-    "@boostercloud/framework-provider-azure": "1.3.0",
     "@boostercloud/framework-common-helpers": "1.3.0",
-    "tslib": "^2.4.0"
+    "@boostercloud/framework-core": "1.3.0",
+    "@boostercloud/framework-provider-azure": "1.3.0",
+    "rocket-encryption-azure-infrastructure": "1.0.27",
+    "tslib": "^2.4.0",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
-    "rocket-encryption-azure-infrastructure": "1.0.6",
-    "@boostercloud/metadata-booster": "1.3.0",
-    "@types/jsonwebtoken": "^8.5.1",
+    "@boostercloud/framework-types": "1.3.0",
     "@boostercloud/framework-provider-azure-infrastructure": "1.3.0",
-    "rimraf": "^3.0.1",
+    "@boostercloud/metadata-booster": "1.3.0",
+    "@types/jsonwebtoken": "8.5.1",
+    "@types/mocha": "8.2.2",
+    "@types/node": "18.0.6",
     "@typescript-eslint/eslint-plugin": "4.22.1",
     "@typescript-eslint/parser": "4.22.1",
     "eslint": "7.26.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
     "mocha": "8.4.0",
-    "@types/mocha": "8.2.2",
     "nyc": "15.1.0",
-    "prettier":  "2.3.0",
-    "typescript": "4.7.4",
+    "prettier": "2.3.0",
+    "rimraf": "^3.0.1",
     "ts-node": "9.1.1",
-    "@types/node": "15.0.2",
-    "ttypescript": "1.5.13"
+    "ttypescript": "1.5.13",
+    "typescript": "4.7.4"
   },
   "engines": {
     "node": ">=14.0.0"
@@ -43,7 +44,8 @@
     "build": "ttsc -b tsconfig.json",
     "deploy": "boost deploy",
     "clean": "rimraf ./dist tsconfig.tsbuildinfo",
-    "test": "AWS_SDK_LOAD_CONFIG=true BOOSTER_ENV=test nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\""
+    "test": "AWS_SDK_LOAD_CONFIG=true BOOSTER_ENV=test nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
+    "prueba": "source ./bash.sh && ./node_modules/@boostercloud/cli/bin/run deploy -e production"
   },
   "types": "lib/index.d.ts"
 }
